--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,8 @@ dependencies {
     implementation 'cn.jzvd:jiaozivideoplayer:7.5.0'
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'net.sourceforge.htmlunit:htmlunit:2.15'
+    implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.orhanobut:logger:2.2.0'
 
 }
