--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,13 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.sun.mail:android-mail:1.5.5'
     implementation 'com.sun.mail:android-activation:1.5.5'
+
+    implementation 'com.google.android.material:material:1.0.0'
+    //更新app
     implementation 'com.github.xuexiangjys:XUpdate:2.0.7'
+    implementation 'com.zhy:okhttputils:2.6.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
 
 
 }
